<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/actionAdd"
            android:orderInCategory="100"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/app_name"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/actionEdit"
            android:orderInCategory="100"
            android:title="@string/toolbar_edit"
            app:showAsAction="ifRoom"
            android:visible="false"/>

    <item
            android:id="@+id/actionDone"
            android:orderInCategory="100"
            android:title="@string/toolbar_done"
            app:showAsAction="ifRoom"
            android:visible="false"/>
</menu>